fix: autocomplete scrollbar on mobile screen

--- a/src/components/autocomplete/autocomplete.css
+++ b/src/components/autocomplete/autocomplete.css
@@ -16,6 +16,11 @@
   overflow: auto;
 }
 
+.Autocomplete-optionListScroll {
+  max-height: 200px;
+  overflow: auto;
+}
+
 .Autocomplete-optionItem {
   border-bottom: 1px solid #e9e9e9;
 }
